# ocs2

ocs2_core/: CMakeLists.txt  package.xml
ocs2_core/include/ocs2_core/: Types.h
ocs2_core/src/: Types.cpp
ocs2_ddp/src/: DDP_HelperFunctions.cpp  GaussNewtonDDP.cpp  ILQR.cpp  SLQ.cpp
ocs2_mpc/src/: MPC_BASE.cpp  MRT_BASE.cpp  SystemObservation.cpp
ocs2_msgs/: CMakeLists.txt  package.xml
ocs2_msgs/msg/: MobimanGoalObservation.msg  MobimanObservationTraj.msg  MobimanOccupancyObservation.msg  collision_info.msg  mpc_data.msg  mpc_observation.msg
ocs2_msgs/srv/: calculateMPCTrajectory.srv  setContinuousActionDRL.srv  setDiscreteActionDRL.srv  setInt.srv  setMPCActionResult.srv  setSystemObservation.srv  setTask.srv
ocs2_pinocchio/ocs2_ext_collision/: CMakeLists.txt  package.xml
ocs2_pinocchio/ocs2_ext_collision/include/ocs2_ext_collision/: Definitions.h  ExtCollision.h  ExtCollisionConstraint.h  ExtCollisionConstraintCppAd.h  ExtCollisionCppAd.h  ExtCollisionPinocchioGeometryInterface.h  KinematicsInterface.hpp  PointsOnRobot.h  ext_common_utility.h  ext_map_utility.h
ocs2_pinocchio/ocs2_ext_collision/src/: ExtCollision.cpp  ExtCollisionConstraint.cpp  ExtCollisionConstraintCppAd.cpp  ExtCollisionCppAd.cpp  ExtCollisionPinocchioGeometryInterface.cpp  KinematicsInterface.cpp  PointsOnRobot.cpp  ext_map_utility.cpp
ocs2_pinocchio/ocs2_ext_collision/srv/: getNearestOccDist.srv
ocs2_pinocchio/ocs2_self_collision_visualization/: CMakeLists.txt  package.xml
ocs2_python_interface/src/: PythonInterface.cpp
ocs2_ros_interfaces/: CMakeLists.txt  package.xml
(+240 files in other folders)
