<?xml version="1.0"?>
<package format="2">
  <name>ocs2_ext_collision</name> 
  <version>0.0.0</version>
  <description>The ocs2_ext_collision package</description>

  <maintainer email="akmandor.n@northestern.edu">Neset Unver Akmandor</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_clang_tools</build_depend>

  <depend>ocs2_core</depend>
  <depend>ocs2_robotic_tools</depend>
  <depend>ocs2_pinocchio_interface</depend>
  <depend>pinocchio</depend>
  <!--depend>ocs2_self_collision</depend-->
  <!--depend>voxblox</depend>
  <depend>voxblox_ros</depend-->
  
</package>

